--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<a href="https://www.notion.so/Nek0y4Su-4253b53277f149d1847d2bdd40d9eab3">My blog</a>
-
+<a href="https://www.notion.so/Nek0y4Su-4253b53277f149d1847d2bdd40d9eab3">My blog - Nek0y4nSu</a>
+Nek0y4nSu 
 
 <script>
   window.location.href="https://www.notion.so/Nek0y4Su-4253b53277f149d1847d2bdd40d9eab3"
