--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<a href="https://www.yuque.com/flu0rite">My blog - Nek0y4nSu</a>
+<a href="https://www.notion.so/Flu0rite-4253b53277f149d1847d2bdd40d9eab3">My blog - Nek0y4nSu</a>
 Nek0y4nSu 
 
 <script>
-  window.location.href="https://www.yuque.com/flu0rite"
+  window.location.href="https://www.notion.so/Flu0rite-4253b53277f149d1847d2bdd40d9eab3"
 </script>
