--- a/index.html
+++ b/index.html
@@ -1,6 +1,63 @@
-<a href="https://www.notion.so/Flu0rite-4253b53277f149d1847d2bdd40d9eab3">My blog - Nek0y4nSu</a>
-Nek0y4nSu 
+<!DOCTYPE html>
+<html lang="en">
 
-<script>
-  window.location.href="https://www.notion.so/Flu0rite-4253b53277f149d1847d2bdd40d9eab3"
-</script>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+</head>
+
+<style>
+    html,
+    body {
+        margin: 0;
+        /* height: 100%; */
+    }
+
+    .container {
+        background-image: url(https://s4.ax1x.com/2021/12/08/oWG1iT.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        position: absolute;
+    }
+
+    div {
+        color: rgb(170, 189, 206);
+    }
+
+    a:link {
+        color: rgb(170, 189, 206);
+        text-decoration: none;
+    }
+
+    a:visited {
+        color: rgb(170, 189, 206);
+    }
+
+    a:hover {
+        color: #e0bae0a9
+    }
+
+    iframe {
+        position: absolute;
+        margin-top: 1%;
+    }
+</style>
+
+<body>
+    <div class="container">
+        <div style="margin-left: 40%;margin-top: 20%;">
+            <a href="https://www.notion.so/Flu0rite-4253b53277f149d1847d2bdd40d9eab3">
+                <h2>My blog 👉 Nek0y4nsu</h2>
+            </a>
+            <br>
+        </div>
+    </div>
+    <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="https://music.163.com/outchain/player?type=2&id=29744628&auto=1&height=32"></iframe>
+</body>
+
+</html>
